# SLSC-Web

./: LICENSE  README.md  pyproject.toml
slsc_web/: protocols.py  requests.py  responses.py  session.py
tests/: test_requests.py  test_slsc_web.py
