[tool.poetry]
name = "slsc-web"
version = "0.1.0"
description = ""
authors = ["mjacobson3 <mwjacobson3@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
urllib3 = "^1.26.14"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^22.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
